dp contract, dp statements, partly dp dashboard, chat and rs

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -198,6 +198,31 @@
         height: pxtovw(13, 375);
       }
     }
+
+    &_nd-bubble {
+      width: 15px;
+      height: 15px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(15, 1660);
+        height: pxtovw(15, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(15, 1366);
+        height: pxtovw(15, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(15, 960);
+        height: pxtovw(15, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(15, 375);
+        height: pxtovw(15, 375);
+      }
+    }
   }
 
   &_fz17 {
@@ -240,6 +265,27 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(13, 375);
+    }
+  }
+
+  &_fz16 {
+    font-size: 16px;
+    line-height: (19 / 16);
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(16, 375);
     }
   }
 
@@ -303,6 +349,56 @@
     @include screen('sm', max, 2) {
       border-radius: pxtovw(15, 375);
       height: pxtovw(30, 375);
+    }
+  }
+
+  &_h32 {
+    height: 32px;
+    border-radius: 16px;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(16, 1660);
+      height: pxtovw(32, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      border-radius: pxtovw(16, 1366);
+      height: pxtovw(32, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      border-radius: pxtovw(16, 960);
+      height: pxtovw(32, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      border-radius: pxtovw(16, 375);
+      height: pxtovw(32, 375);
+    }
+  }
+
+  &_h35 {
+    height: 35px;
+    border-radius: 20px;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(20, 1660);
+      height: pxtovw(35, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      border-radius: pxtovw(20, 1366);
+      height: pxtovw(35, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      border-radius: pxtovw(20, 960);
+      height: pxtovw(35, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      border-radius: pxtovw(20, 375);
+      height: pxtovw(35, 375);
     }
   }
 
