--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -95,6 +95,10 @@
         @include grid-column(1, 2);
         @include grid-row(2, 3);
       }
+
+      // .nd-page_chat & {
+      //   position: relative;
+      // }
     }
 
     #{$b}_map & {
