--- a/app/components/document/document.pug
+++ b/app/components/document/document.pug
@@ -3,7 +3,7 @@ mixin document()
     block
 
 mixin nd-document()
-  +b.ARTICLE.document&attributes(attributes)
+  +b.ARTICLE.nd-document&attributes(attributes)
     block
 
 mixin document-section()
