--- a/app/components/messenger/messenger.pug
+++ b/app/components/messenger/messenger.pug
@@ -1,3 +1,7 @@
 mixin messenger()
   +b.messenger&attributes(attributes)
+    +e.content
+    +e.FORM.form
+      +e.TEXTAREA.field(placeholder="Write something..." rows="1")
+      +e.BUTTON.send(type="submit") Send
     block
