--- a/app/components/page-header/nd-page-header.scss
+++ b/app/components/page-header/nd-page-header.scss
@@ -5,6 +5,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 26px 0;
+  flex: none;
 
   @include screen('xlg', max, 2) {
     padding: pxtovw(26, 1660) 0;
