--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -197,6 +197,7 @@ include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
 include ../components/content/content
 include ../components/content/nd-content
+include ../components/contract-panel/contract-panel
 include ../components/conversation/conversation
 include ../components/dashboard/dashboard
 include ../components/document/document
