--- a/app/pages/deal-pass/deal-pass-chat.pug
+++ b/app/pages/deal-pass/deal-pass-chat.pug
@@ -9,7 +9,7 @@ block bodyClasses
 
 block header
   - var headerClass = ' is-login'
-  - var pageClass = ''
+  - var pageClass = ' nd-page_chat'
   - var isMap = true
   - var host = false
 
