--- a/app/pages/deal-pass/deal-pass-rs.pug
+++ b/app/pages/deal-pass/deal-pass-rs.pug
@@ -40,10 +40,10 @@ block content
           +board._pad40.__board_rs._rs_main
             +board-header
               +board-title('h2')._fz22 Rental Summary
-              +e.state_dbl-check Accepted both sides on 30 May 2020
+              +e.state.is-dbl-check Accepted both sides on 30 May 2020
           +board._pad40.__board_rs._rs_payments
             +board-title._fz20 Payment summary
-            +nd-table._info._info_h50.__table
+            +nd-table._info._info_h50._info_md-fz16._fw500.__table
                 tbody
                   tr
                     td Total monthly rent:
