--- a/app/pages/deal-pass/deal-pass-statements.pug
+++ b/app/pages/deal-pass/deal-pass-statements.pug
@@ -38,13 +38,13 @@ block content
       +nd-content-main
         +dashboard
           +board._pad35.__board
-            +board-header
+            +board-header._align-base
               +board-title('h2')._fz22 Statements
               +e.pay-info
-                +e.pay-describe Fund source | Direct Debit:
+                +e.pay-describe.nd-hide-sm Fund source | Direct Debit:
                 +e.pay-source Company card (15346347)
-                +nd-link._blue.__link Change...
-            +nd-table._rent-state.__table
+                +nd-link._blue.__pay-link(href="#") Change...
+            +nd-table._rent-state.__table_mt27
               thead
                 tr
                   th Issued
