--- a/app/pages/sitemap/sitemap.scss
+++ b/app/pages/sitemap/sitemap.scss
@@ -3,6 +3,10 @@
   padding: 60px 0;
 
   &__list {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
     list-style: none;
 
     &:not(:last-child) {
@@ -12,10 +16,7 @@
     a {
       display: block;
       width: 100%;
-
-      &:not(:last-child) {
-        margin-bottom: 20px;
-      }
+      margin-bottom: 20px;
     }
   }
 
