--- a/app/blocks/board/board.scss
+++ b/app/blocks/board/board.scss
@@ -4,26 +4,109 @@
   display: block;
   border-radius: 3px;
   background-color: $nd-color-basic-light;
-  padding: 26px 26px 19px;
+  padding: 26px 26px 25px;
 
   @include screen('xlg', max, 2) {
-    padding: pxtovw(26, 1660) pxtovw(26, 1660) pxtovw(19, 1660);
+    padding: pxtovw(26, 1660) pxtovw(26, 1660) pxtovw(25, 1660);
     border-radius: pxtovw(3, 1660);
   }
 
   @include screen('lg', max, 2) {
-    padding: pxtovw(26, 1366) pxtovw(26, 1366) pxtovw(19, 1366);
+    padding: pxtovw(26, 1366) pxtovw(26, 1366) pxtovw(25, 1366);
     border-radius: pxtovw(3, 1366);
   }
 
   @include screen('md', max, 2) {
-    padding: pxtovw(26, 960) pxtovw(26, 960) pxtovw(19, 960);
+    padding: pxtovw(26, 960) pxtovw(26, 960) pxtovw(25, 960);
     border-radius: pxtovw(3, 960);
   }
 
   @include screen('sm', max, 2) {
-    padding: pxtovw(26, 375) pxtovw(18, 375) pxtovw(18, 375);
+    padding: pxtovw(26, 375) pxtovw(18, 375) pxtovw(25, 375);
     border-radius: pxtovw(3, 375);
+  }
+
+  &_pt22 {
+    padding-top: 22px;
+
+    @include screen('xlg', max, 2) {
+      padding-top: pxtovw(22, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-top: pxtovw(22, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: pxtovw(22, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-top: pxtovw(22, 375);
+    }
+  }
+
+  &_pad35 {
+    padding: 26px 35px 46px;
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(26, 1660) pxtovw(35, 1660) pxtovw(46, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(26, 1366) pxtovw(35, 1366) pxtovw(46, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(26, 960) pxtovw(26, 960) pxtovw(35, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(26, 375) pxtovw(18, 375) pxtovw(35, 375);
+    }
+  }
+
+  &_fx {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: flex-start;
+
+    @include screen('sm', max, 2) {
+      flex-wrap: wrap;
+    }
+
+    &_align-base {
+      align-items: baseline;
+    }
+  }
+
+  &__person {
+    &:not(:first-child) {
+      margin-left: 20px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-left: pxtovw(20, 375);
+      }
+    }
   }
 
   &__title {
@@ -85,6 +168,583 @@
 
     &_wide {
       width: 100%;
+    }
+
+    &.is-dbl-check {
+      box-sizing: border-box;
+      padding-right: 40px;
+      background-repeat: no-repeat;
+      background-size: 25px 15px;
+      background-position: 100% 50%;
+      background-image: $icon-double-check;
+
+      @include screen('xlg', max, 2) {
+        padding-right: pxtovw(40, 1660);
+        background-size: pxtovw(25, 1660) pxtovw(15, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding-right: pxtovw(40, 1366);
+        background-size: pxtovw(25, 1366) pxtovw(15, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding-right: pxtovw(40, 960);
+        background-size: pxtovw(25, 960) pxtovw(15, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding-right: pxtovw(40, 375);
+        background-size: pxtovw(25, 375) pxtovw(15, 375);
+      }
+    }
+  }
+
+  &__table {
+    width: 100%;
+
+    &:last-child {
+      margin-bottom: 6px;
+
+      @include screen('xlg', max, 2) {
+        margin-bottom: pxtovw(6, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-bottom: pxtovw(6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-bottom: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-bottom: pxtovw(6, 375);
+      }
+    }
+
+    &:not(:first-child) {
+      margin-top: 33px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(33, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(22, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(22, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(16, 375);
+      }
+    }
+
+    &_mt8 {
+      &:not(:first-child) {
+        margin-top: 8px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(8, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(12, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(12, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(15, 375);
+        }
+      }
+    }
+
+    &_mt22 {
+      &:not(:first-child) {
+        margin-top: 22px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(22, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(25, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(25, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(25, 375);
+        }
+      }
+    }
+
+    &_mt27 {
+      &:not(:first-child) {
+        margin-top: 27px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(27, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(26, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(26, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(26, 375);
+        }
+      }
+    }
+
+    &_md-mt42 {
+      &:not(:first-child) {
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(42, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(42, 375);
+        }
+      }
+    }
+  }
+
+  &__links {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 37px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(37, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(37, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(37, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(18, 375);
+      }
+    }
+
+    &_end {
+      justify-content: flex-end;
+    }
+  }
+
+  &__link-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 41px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(41, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(41, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(41, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(42, 375);
+      }
+    }
+
+    #{$b}__link {
+      &:not(:first-child) {
+        margin-top: 45px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(30, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(30, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(30, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(30, 375);
+        }
+      }
+    }
+  }
+
+  &__link {
+    font-size: 16px;
+    line-height: 1.2;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(16, 375);
+    }
+
+    &_fz20 {
+      font-size: 20px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(16, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(16, 375);
+      }
+    }
+
+    &_fz14 {
+      font-size: 14px;
+      letter-spacing: -.02em;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(14, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(14, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(14, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(14, 375);
+      }
+    }
+
+    &_fw600 {
+      font-weight: 600;
+    }
+
+    &_bold {
+      font-weight: 700;
+    }
+  }
+
+  &__column {
+    width: 100%;
+
+    @include screen('md', max, 2) {
+      width: calc(50% - ((1000 / 960) * 1vw));
+    }
+
+    @include screen('sm', max, 2) {
+      width: 100%;
+    }
+
+    &:not(:first-child) {
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(43, 375);
+      }
+    }
+  }
+
+  &__chat {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    text-align: right;
+
+    &:not(:first-child) {
+      margin-top: 40px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(40, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(40, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(40, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(40, 375);
+      }
+    }
+  }
+
+  &__chat-time {
+    display: block;
+    font-size: 14px;
+    line-height: 1;
+    width: 100%;
+    color: $nd-color-gray-text;
+    text-align: left;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(14, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(14, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(14, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(14, 375);
+    }
+  }
+
+  &__chat-message {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    font-size: 16px;
+    line-height: 1;
+    font-weight: 600;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-clamp: 2;
+    text-align: left;
+    overflow: hidden;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(16, 375);
+    }
+
+    &:not(:first-child) {
+      margin-top: 12px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(12, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(14, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(14, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(14, 375);
+      }
+    }
+  }
+
+  &__chat-button {
+    min-width: 54px;
+
+    @include screen('xlg', max, 2) {
+      min-width: pxtovw(54, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      min-width: pxtovw(54, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      min-width: pxtovw(54, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      min-width: pxtovw(54, 375);
+    }
+
+    &:not(:first-child) {
+      margin-top: 58px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(58, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(35, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(35, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(35, 375);
+      }
+    }
+  }
+
+  &__pay-info {
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    font-size: 16px;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+    }
+
+    &:not(:first-child) {
+      margin-left: 20px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-left: 0;
+        margin-top: pxtovw(12, 375);
+      }
+    }
+  }
+
+  &__pay-describe {
+    font-weight: 600;
+  }
+
+  &__pay-source {
+    &:not(:first-child) {
+      margin-left: 9px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(9, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(9, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: pxtovw(9, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-left: 0;
+      }
+    }
+  }
+
+  &__pay-link {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(14, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(14, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(14, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(14, 375);
+    }
+
+    &:not(:first-child) {
+      margin-left: 10px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(10, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(10, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: pxtovw(10, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-left: pxtovw(10, 375);
+      }
     }
   }
 
