--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -115,10 +115,15 @@
 
         @include screen('md', max, 2) {
           margin-top: pxtovw(21, 960);
+          max-width: pxtovw(137, 960);
         }
 
         @include screen('sm', max, 2) {
           margin-top: pxtovw(15, 375);
+          margin-left: pxtovw(-18, 375);
+          margin-right: pxtovw(-18, 375);
+          width: calc(100% + ((3600 / 375) * 1vw));
+          max-width: none;
         }
       }
     }
@@ -161,6 +166,14 @@
       @include screen('lg', max, 2) {
         padding-top: 61.8%;
       }
+
+      @include screen('md', max, 2) {
+        padding-top: 62.7%;
+      }
+
+      @include screen('sm', max, 2) {
+        padding-top: 61.8%;
+      }
     }
 
     #{$b}_side-nav_view & {
@@ -168,6 +181,10 @@
 
       @include screen('lg', max, 2) {
         padding-top: 58.5%;
+      }
+
+      @include screen('md', max, 2) {
+        padding-top: 63%;
       }
     }
 
@@ -270,7 +287,7 @@
         }
 
         @include screen('sm', max, 2) {
-          margin-top: pxtovw(10, 375);
+          margin-top: pxtovw(13, 375);
         }
       }
     }
@@ -1038,11 +1055,7 @@
       }
 
       @include screen('md', max, 2) {
-        padding: 0 pxtovw(30, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        padding: 0 pxtovw(30, 375);
+        padding: 0;
       }
     }
   }
