--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -15,11 +15,11 @@
   }
 
   @include screen('md', max, 2) {
-    margin-top: pxtovw(-20, 960);
+    margin-top: pxtovw(3, 960);
   }
 
   @include screen('sm', max, 2) {
-    margin-top: pxtovw(-20, 375);
+    margin-top: pxtovw(-4, 375);
   }
 
   &__board {
@@ -62,6 +62,10 @@
         @include screen('md', max, 2) {
           @include grid-column(3, 4);
           @include grid-row(2, 3);
+
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
         }
 
         @include screen('sm', max, 2) {
@@ -130,9 +134,15 @@
         @include grid-column(3, 4);
         @include grid-row(1, 2);
 
+        position: sticky;
+        top: 80px;
+
         @include screen('sm', max, 2) {
           @include grid-column(1, 2);
           @include grid-row(1, 2);
+
+          position: static;
+          top: auto;
         }
       }
     }
@@ -253,7 +263,7 @@
     @include grid-template-rows(auto auto);
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(50, 1660) pxtovw(3680, 1660));
+      @include grid-template-columns(1fr pxtovw(50, 1660) pxtovw(368, 1660));
     }
 
     @include screen('lg', max, 2) {
