--- a/app/pages/deal-pass/deal-pass-contracts.pug
+++ b/app/pages/deal-pass/deal-pass-contracts.pug
@@ -42,30 +42,28 @@ block content
               +e.place One Heddon Street
               +e.address Floor 5 Dedicated office space. Room 54
               +e.title WORKSPACE OCCUPATION AGGREEMENT
-              +e.TABLE.requisites
-                thead
-                  tr
-                    th Host details (Space owner)
-                    th Guest details (Ocupier)
-                tbody
-                  tr
-                    td LABS inc. Spaces Registration number: 90238620105932 Registered office: Canterbury Court, Kennington Park, 145 Brixton Road, London, SW9 6DE
-                    td Eugene Peterson Registration number: 90238620105932 Registered office: Canterbury Court, Kennington Park, 145 Brixton Road, London, SW9 6DE
+              +e.requisites
+                +e.requisite
+                  +e.requisite-title Host details (Space owner)
+                  +e.requisite-text LABS inc. Spaces Registration number: 90238620105932 Registered office: Canterbury Court, Kennington Park, 145 Brixton Road, London, SW9 6DE
+                +e.requisite
+                  +e.requisite-title Guest details (Ocupier)
+                  +e.requisite-text Eugene Peterson Registration number: 90238620105932 Registered office: Canterbury Court, Kennington Park, 145 Brixton Road, London, SW9 6DE
               +e.TABLE.objects
                 tbody
                   tr
                     td Unit
-                    td Room 54 One heddon Street Spaces 393 One Heddon Street, London, SW7 8HE
+                    td Room 54 <br> One heddon Street Spaces 393 <br> One Heddon Street, London, SW7 8HE
                   tr
                     td Unit
-                    td Room 54 One heddon Street Spaces 393 One Heddon Street, London, SW7 8HE
+                    td Room 54 <br> One heddon Street Spaces 393 <br> One Heddon Street, London, SW7 8HE
             +e.body
               p Payment agreements are used in business relationships when one party agrees to pay another. Freelancers and independent contractors often use payment agreements with their clients to ensure that they will be paid fairly and on time. Many payment agreements also fall under other categories, such as service agreements. A car rental agreement is a type of payment agreement. Car rental agreements likely will cover insurance information, contain a description of the vehicle and its registration information, list the odometer reading, and note any existing wear and tear so the renter is not liable. A vendor agreement is another type of payment agreement used when a vendor at a fair or market must enter into an agreement with the hosting party. In a vendor agreement, the vendor may pay for their space up-front, but then keep any profits from the event, or may agree to pay a commission of their profits to the host. These agreements cover payments, but also line up terms and conditions of what is expected of both parties.
               p Payment agreements are used in business relationships when one party agrees to pay another. Freelancers and independent contractors often use payment agreements with their clients to ensure that they will be paid fairly and on time. Many payment agreements also fall under other categories, such as service agreements. A car rental agreement is a type of payment agreement. Car rental agreements likely will cover insurance information, contain a description of the vehicle and its registration information, list the odometer reading, and note any existing wear and tear so the renter is not liable. A vendor agreement is another type of payment agreement used when a vendor at a fair or market must enter into an agreement with the hosting party. In a vendor agreement, the vendor may pay for their space up-front, but then keep any profits from the event, or may agree to pay a commission of their profits to the host. These agreements cover payments, but also line up terms and conditions of what is expected of both parties.
               p Payment agreements are used in business relationships when one party agrees to pay another. Freelancers and independent contractors often use payment agreements with their clients to ensure that they will be paid fairly and on time. Many payment agreements also fall under other categories, such as service agreements. A car rental agreement is a type of payment agreement. Car rental agreements likely will cover insurance information, contain a description of the vehicle and its registration information, list the odometer reading, and note any existing wear and tear so the renter is not liable. A vendor agreement is another type of payment agreement used when a vendor at a fair or market must enter into an agreement with the hosting party. In a vendor agreement, the vendor may pay for their space up-front, but then keep any profits from the event, or may agree to pay a commission of their profits to the host. These agreements cover payments, but also line up terms and conditions of what is expected of both parties.
           +board.__board_contract._contract_side
-            +board-title._wide._dbl-check Contract status
-            +nd-table._info._info_h30.__table
+            +board-title._wide.is-dbl-check Contract status
+            +nd-table._info._info_h30._info_md-fz16.__table_mt22
               tbody
                 tr
                   td Signed by
@@ -77,10 +75,11 @@ block content
                   td Signed on
                   td 24 April 2020
             +e.link-list
-              +nd-link-pdf({icon: 'nd-document', text: 'Download Contract'})._icon_blue.__link_bold(href="#")
+              +nd-link-pdf({icon: 'nd-document', text: 'Download Contract'})._icon_blue.__link_bold._fz20(href="#")
               +nd-link-icon('nd-cancel')._icon_blue.__link Terminate the contract
 
 
 block panels
+  +contract-panel
 
 block popups
